--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "moonitor",
+  "description": "moonitor",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/GitKap/moonitor",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -10,6 +10,9 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "angular-resource": "~1.2.x",
+    "bootstrap": "~3.1.1",
+    "jquery": "1.10.2",
+    "angular-animate": "~1.2.x"
   }
 }
